@@ -5,71 +5,94 @@ import java.io.PrintWriter;
 import java.net.Socket;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
-/* Класс реализует клиентскую сторону чата. Он соединяется с сервером, устанавливает имя пользователя
- и участвует в процессе обмена сообщениями */
+/*
+Класс реализует клиентскую сторону чата. Он соединяется с сервером, устанавливает имя пользователя
+и участвует в процессе обмена сообщениями
+*/
 public class ChatClient {
-    // инициализация полей: адрес сервера, порт, имя пользователя и имя файла журнала
+    // Поля: адрес сервера, порт, имя пользователя и имя файла журнала
     private final String SERVER_ADDRESS;
     private final int SERVER_PORT;
     private final String USERNAME;
     private final String LOG_FILE_NAME = "file.log";
 
-    // через конструктор примем аргументы для адреса сервера, порта и имени пользователя
+    // Булевская переменная для контроля активности клиента
+    private volatile boolean running = true;
+
+    // Конструктор принимает адрес сервера, порт и имя пользователя
     public ChatClient(String address, int port, String username) {
         this.SERVER_ADDRESS = address;
         this.SERVER_PORT = port;
         this.USERNAME = username;
     }
 
-    // Метод устанавливает соединение с сервером и запускает обработку сообщений в отдельном потоке
+    /*
+    Основная точка входа для запуска клиента: соединение с сервером, авторизация и последующий обмен сообщениями
+    */
     public void run() throws Exception {
         ExecutorService executor = Executors.newSingleThreadExecutor();
         try (Socket socket = new Socket(SERVER_ADDRESS, SERVER_PORT)) {
-            // Получаем потоки для чтения и записи данных от сервера
             BufferedReader reader = new BufferedReader(new InputStreamReader(socket.getInputStream()));
             PrintWriter writer = new PrintWriter(socket.getOutputStream(), true);
 
-            writer.println(USERNAME); // Отправляем серверу наше имя для авторизации
+            // Авторизуемся на сервере
+            writer.println(USERNAME);
 
-            executor.submit(() -> receiveMessages(reader)); // создаётся фоновый поток для приёма сообщений от сервера
+            // Запускаем поток для приёма сообщений от сервера
+            executor.submit(() -> receiveMessages(reader));
 
-            /* Циклично читает пользовательские сообщения и отправляет их на сервер. Цикл продолжается до
-             тех пор, пока пользователь не ввёл пустую строку или команду /exit. */
+            // Основное циклическое чтение сообщений пользователя
             BufferedReader userInput = new BufferedReader(new InputStreamReader(System.in));
             String line;
-            while (!(line = userInput.readLine()).trim().isEmpty() && !"/exit".equals(line)) {
-                writer.println(line);
+            while (running) {
+                line = userInput.readLine();
+                if ("/exit".equalsIgnoreCase(line)) {
+                    stop(); // Останавливаем клиента
+                } else {
+                    writer.println(line); // Отправляем сообщение на сервер
+                }
             }
-
-            // закрываем соединение и останавливаем обработчики сообщений
-            System.out.println("Вы вышли из чата.");
         } finally {
-            executor.shutdown();
+            executor.shutdown(); // Завершаем исполнители (потоки)
         }
     }
 
-    /* Методом receiveMessages() непрерывно принимается каждое входящее сообщение от сервера и выводится
-     на экран. Каждая принятая строка также сохраняется в журнале */
+    // Останавливает клиента и закрывает соединение
+    private void stop() {
+        running = false; // Сигнал для остановки приёма сообщений
+        System.out.println("Вы вышли из чата.");
+    }
+
+    /*
+    Непрерывно принимает входящие сообщения от сервера и выводит их на экран.
+    Каждая принятая строка также сохраняется в файле журнала.
+    */
     private void receiveMessages(BufferedReader reader) {
         try {
             String line;
-            while ((line = reader.readLine()) != null) {
+            while (running && (line = reader.readLine()) != null) {
                 System.out.println(line);
                 appendLog(line); // Добавляем входящее сообщение в лог
             }
         } catch (IOException ex) {
-            System.err.println("Ошибка при чтении сообщений: " + ex.getMessage());
+            if (!running) {
+                System.out.println("Связь закрыта."); // Нормально завершилась связь
+            } else {
+                System.err.println("Ошибка при чтении сообщений: " + ex.getMessage());
+            }
         }
     }
 
-    // Метод дополняет файл журнала новой записью
+    // Дополняет файл журнала новой записью
     private void appendLog(String entry) {
         try {
-            Files.writeString(Path.of(LOG_FILE_NAME), entry + "\n", StandardOpenOption.APPEND);
+            Path logPath = Paths.get(LOG_FILE_NAME);
+            Files.writeString(logPath, entry + "\n", StandardOpenOption.CREATE, StandardOpenOption.APPEND);
         } catch (IOException ex) {
             System.err.println("Ошибка записи в лог-файл: " + ex.getMessage());
         }
